# background-jobs

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  send_mail.py
image-preview/: .dockerignore  architecture.md  docker-compose.prod.yml  docker-compose.yml
image-preview/server/: Dockerfile  package.json  pnpm-lock.yaml  prisma.config.ts  tsconfig.json
image-preview/server/prisma/: schema.prisma
image-preview/server/prisma/migrations/20260225055838_initilize_table/: migration.sql
image-preview/server/public/: index.html  script.js
image-preview/server/src/: app.ts  constant.ts  index.ts
image-preview/server/src/config/: s3Client.ts
image-preview/server/src/controllers/: image.controller.ts  job.controller.ts
image-preview/server/src/lib/: prisma.ts  rabbitmq.ts
image-preview/server/src/middlewares/: zodParser.middleware.ts
image-preview/server/src/routes/: image.routes.ts  job.routes.ts
image-preview/server/src/services/: sse.service.ts  upload.service.ts
image-preview/server/src/utils/: ApiError.ts  ApiResponse.ts  asyncHandler.ts  requiredEnv.ts
image-preview/worker/: Dockerfile  main.py  pyproject.toml
image-preview/worker/modules/: database_service.py  getenv.py  preview_generator.py  rabbitmq.py  retry_queue_producer.py  status_publish_queue.py  storage_service.py
sample_task/: .dockerignore  docker-compose.yml
sample_task/server/: package.json
sample_task/worker/: send_mail.py
server/: index.js
worker/: Dockerfile  _getenv.py  get_random_response.py  main.py
(+5 files in other folders)
