[project]
name = "image_preview-generator"
version = "0.1.0"
description = "A worker for generating image previews."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.55",
    "pika>=1.3.2",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = []
